react list fixed and allow unity to capture keyboard input

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "experiment",
-  "version": "0.1.0",
+  "name": "unity-fence",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
